<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nim</string>
    <string name="my_channels">My Channels</string>
    <string name="my_connections">My Connections</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_channel_screen"></string>
    <string name="add_new_channel">+</string>
    <string name="dialog_title">Delete Channel</string>
    <string name="confirm_deactivate_title">Confirm Deactivation</string>
    <string name="deactivate_message">Are you sure you would like to stop receiving notifications from this channel?</string>
    <string name="dialog_message">Are you sure you want to delete this channel? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="message_error">You cannot be subscribed to more than 5 channels</string>
    <string name="error_title">Add Channel</string>


    <string name="menu_connections">My Connections</string>
    <string name="menu_myChannels">My Channels</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_users">Users</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_cancel">Cancel</string>



    <string name="enter">enter</string>
    <string name="textSave">Save</string>
    <string name="title_activity_side_bar_menu">sideBarMenuActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="textWarning">Warning</string>
    <string name="textWarningMessage">Setting your email to private will change your username to its CCID</string>
    <string name="title_activity_add_channel_screen">AddChannelScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">Log Out</string>

    <string name="action_search">Search</string>


    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_test">testActivity</string>
    <string name="camera_icon_desc">Camera Icon</string>

    <string name="view_message">View message</string>
</resources>
