<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cmput401.classdiscuss.MyChannelScreen">
    <item android:id="@+id/action_myConnections" android:title="@string/my_connections"
        android:icon="@drawable/ic_myconnections"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_profile" android:title="@string/menu_profile"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/menu_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
