<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cmput401.classdiscuss.MyChannelScreen">
    <item android:id="@+id/action_myConnections" android:title=""
        android:icon="@drawable/ic_chat_icon"
        android:orderInCategory="2" app:showAsAction="always" />
    <item android:id="@+id/action_profile" android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile_icon"
        android:orderInCategory="1" app:showAsAction="always"/>
    <!--<item android:id="@+id/action_profile" android:title="@string/menu_profile"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_users" android:title="@string/menu_users"
        android:orderInCategory="3" app:showAsAction="always"
        android:icon="@drawable/ic_look_up_users"/>
    <item android:id="@+id/action_logout" android:title="@string/logout"
        android:orderInCategory="4"
        android:icon="@drawable/ic_logout_icon"/>
</menu>
