<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:context="${relativePackage}.${activityClass}" >
        <ListView
            android:id="@+id/lvChat"
            android:transcriptMode="alwaysScroll"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"/>

        <LinearLayout
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/postPicView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/message_hint"
                android:imeOptions="actionSend"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/buttons"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!-- camera icon from  http://images.clipartpanda.com/camera-icon-png-slr-camera-xxl.png-->
                <ImageButton
                    android:id="@+id/btPicAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/camera_icon_desc"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_camera_resized" />
                <!-- send icon from http://cdn.flaticon.com/png/256/1454.png-->
                <ImageButton
                    android:id="@+id/btSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:src="@drawable/send_message"
                    android:background="@null"
                    android:text="@string/send"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

</LinearLayout>
